--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,18 +55,16 @@ a:hover {
 }
 
 .hero__bg {
-  width: 60%;
-  height: 100%;
+  width: 65%;
+  height: 180%;
   top: 0;
   left: 0;
   background: url(../image/hero.png);
   position: absolute;
-  background-position: top center;
+  background-position: left center;
   background-size: cover;
-  /* -webkit-clip-path: polygon(100% 0, 0 0, 0 100%); */
-  /* clip-path: polygon(100% 0, 0 0, 0 100%); */
-  -webkit-clip-path: polygon(83% 0, 0 0, 0 100%);
-  clip-path: polygon(83% 0, 0 0, 0 100%);
+  -webkit-clip-path: polygon(95% 0, 0 0, 0 100%);
+  clip-path: polygon(95% 0, 0 0, 0 100%);
 }
 
 .bg__noise {
@@ -103,6 +101,7 @@ a:hover {
   letter-spacing: normal;
   color: #ffffff;
   padding-left: 5rem;
+  margin-top: 10rem;
 }
 
 /* form */
@@ -470,7 +469,7 @@ input:-webkit-autofill:active {
 
 /* info */
 .info__description {
-  font-size: 0.938rem;
+  font-size: 1.098rem;
   font-weight: normal;
   font-stretch: normal;
   line-height: 1.87;
@@ -596,8 +595,8 @@ input:-webkit-autofill:active {
 }
 
 .countdown__box {
-  width: 110.4px;
-  height: 103.2px;
+  width: 7.5rem;
+  height: 6.5rem;
   border-radius: 4px;
   box-shadow: 0 4px 6px 2px rgba(48, 8, 41, 0.25);
   background-color: #300829;
@@ -625,6 +624,12 @@ input:-webkit-autofill:active {
 }
 
 /* social icons */
+
+.social-icons { 
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
 
 .social-icons img {
   max-width: 2.188rem;
