--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,8 +55,8 @@ a:hover {
 }
 
 .hero__bg {
-  width: 65%;
-  height: 180%;
+  width: 60%;
+  height: 160%;
   top: 0;
   left: 0;
   background: url(../image/hero.png);
@@ -110,8 +110,8 @@ a:hover {
   }
 
   .hero__bg {
-    width: 110%;
-    height: 60%;
+    width: 100%;
+    height: 50%;
     background-position: top center;
     background-size: cover;
     -webkit-clip-path: polygon(55% 0, 0 0, 0 100%);
@@ -119,16 +119,41 @@ a:hover {
   }
 
   .hero__description {
-    font-size: 1.4rem;
+    font-size: 1.193rem;
   }
 
   .hero__title {
-    font-size: 2.813rem;
+    font-size: 1.875rem;
     padding-left: 0;
     margin-top: 12rem;
     text-align: right;
   }
 }
+
+@media (max-width: 768px) {
+  .hero__bg {
+    width: 65%;
+    height: 70%;
+    background-position: top center;
+    background-size: cover;
+    -webkit-clip-path: polygon(55% 0, 0 0, 0 100%);
+    clip-path: polygon(55% 0, 0 0, 0 100%);
+  }
+}
+
+@media (max-width: 992px) {
+  .hero {
+    min-height: auto;
+    padding-bottom: 4rem;
+  }
+
+  .hero__bg {
+    width: 100%;
+    height: 60%;
+  }
+}
+ 
+
 
 /* form */
 
@@ -181,7 +206,7 @@ a:hover {
 
 @media (max-width: 720px) {
   .form {
-    margin-bottom: 2rem;
+    margin-bottom: 3.5rem;
   }
 }
 
@@ -450,18 +475,6 @@ input:-webkit-autofill:active {
   padding: 10px;
 }
 
-@media (max-width: 576px) {
-  .box img {
-    margin-right: 0 !important;
-    margin-bottom: 2rem;
-  }
-
-  .hero h1 {
-    margin-top: 7.725rem;
-    font-size: 2.65rem;
-  }
-}
-
 .submitted-message p {
   color: #000;
 }
@@ -611,6 +624,7 @@ input:-webkit-autofill:active {
 .icons img {
   width: 5.313rem;
   height: 5.313rem;
+  margin-bottom: 1.5rem;
 }
 
 .icons__title {
@@ -632,6 +646,12 @@ input:-webkit-autofill:active {
   text-align: center;
   color: #535c6e;
   padding: 1rem 2rem 0;
+}
+
+@media (max-width: 992px) {
+  .icons img {
+    margin-top: 1.5rem;
+  }
 }
 
 /* countdow */
@@ -658,7 +678,7 @@ input:-webkit-autofill:active {
 }
 
 .countdown__box {
-  width: 7.5rem;
+  width: 33%;
   height: 6.5rem;
   border-radius: 4px;
   box-shadow: 0 4px 6px 2px rgba(48, 8, 41, 0.25);
@@ -692,8 +712,20 @@ input:-webkit-autofill:active {
   }
 
   .countdown__box {
-    width: 33%;
+    height: 5.5rem;
   }
+
+  .countdown__time {
+    font-size: 2.488rem;
+    line-height: 1.4;
+  }
+
+  .countdown__description {
+    font-size: 0.788rem;
+  }
+}
+
+@media (max-width: 992px) {
 }
 
 /* social icons */
@@ -723,10 +755,10 @@ input:-webkit-autofill:active {
 
 .footer {
   background-color: #fff;
-  min-height: 100px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin-bottom: 1.5rem;
 }
 
 .footer p {
