--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,12 +37,6 @@ a:hover {
   padding: 5.313rem 0;
 }
 
-@media (max-width: 992px) {
-  .section {
-    padding: 2.313rem 0;
-  }
-}
-
 /* colors */
 
 .background-light {
@@ -56,16 +50,15 @@ a:hover {
   height: 100%;
   position: relative;
   padding-bottom: 5rem;
-  padding-top: 30px;
   background-color: #ff3d35;
 }
 
 .hero__bg {
   width: 60%;
-  height: 180%;
+  height: 90%;
   top: 0;
   left: 0;
-  background: url(../image/hero.png);
+  background: url(../image/big-hero.png);
   position: absolute;
   background-position: left center;
   background-size: cover;
@@ -99,14 +92,28 @@ a:hover {
 }
 
 .hero__title {
-  font-family: "IntegralCF-Heavy";
   font-size: 4.688rem;
   font-weight: 900;
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
   color: #ffffff;
-  margin-top: 10.5rem;
+  margin-top: 13.80rem;
+}
+
+.hero__title .line-1 {
+  font-family: "IntegralCF-Heavy";
+  display: block;
+  clear: both;
+  text-align: left;
+}
+
+.hero__title .line-2 {
+  font-family: "IntegralCF-Heavy";
+  display: block;
+  clear: both;
+
+  text-align: right;
 }
 
 @media (max-width: 720px) {
@@ -116,11 +123,11 @@ a:hover {
 
   .hero__bg {
     width: 100%;
-    height: 50%;
+    height: 60%;
     background-position: top center;
     background-size: cover;
-    -webkit-clip-path: polygon(55% 0, 0 0, 0 100%);
-    clip-path: polygon(55% 0, 0 0, 0 100%);
+    -webkit-clip-path: polygon(65% 0, 0 0, 0 100%);
+    clip-path: polygon(65% 0, 0 0, 0 100%);
   }
 
   .hero__description {
@@ -133,16 +140,9 @@ a:hover {
     margin-top: 12rem;
     text-align: right;
   }
-}
 
-@media (max-width: 768px) {
-  .hero__bg {
-    width: 65%;
-    height: 70%;
-    background-position: top center;
-    background-size: cover;
-    -webkit-clip-path: polygon(55% 0, 0 0, 0 100%);
-    clip-path: polygon(55% 0, 0 0, 0 100%);
+  .hero__title .line-1 {
+    text-align: right;
   }
 }
 
@@ -152,9 +152,8 @@ a:hover {
     padding-bottom: 4rem;
   }
 
-  .hero__bg {
-    width: 95%;
-    height: 40%;
+  .hero__title .line-1 {
+    text-align: right;
   }
 }
 
@@ -168,16 +167,33 @@ a:hover {
   .hero__title {
     float: right;
   }
+
   .hero__bg {
-    width: 60%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    background-position: top center;
+    background-size: cover;
+    -webkit-clip-path: polygon(65% 0, 0 0, 0 100%);
+    clip-path: polygon(65% 0, 0 0, 0 100%);
+  }
+
+  .hero__title .line-1 {
+    text-align: right;
   }
 }
 
 @media (min-width: 1200px) {
   .hero__bg {
-    width: 60%;
+    width: 70%;
     height: 180%;
+    background-position: center top;
+    background-size: cover;
+    -webkit-clip-path: polygon(90% 0, 0 0, 0 100%);
+    clip-path: polygon(90% 0, 0 0, 0 100%);
+  }
+
+  .hero__title .line-1 {
+    text-align: left;
   }
 }
 
@@ -692,7 +708,7 @@ input:-webkit-autofill:active {
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
-  padding-top: 5.125rem;
+  padding-top: 3.25rem;
 }
 
 .countdown__timer {
