--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ a:hover {
   line-height: normal;
   letter-spacing: normal;
   color: #ffffff;
-  margin-top: 13.80rem;
+  margin-top: 13.8rem;
 }
 
 .hero__title .line-1 {
@@ -277,6 +277,17 @@ a:hover {
 
 .nav img {
   transform: translateY(-5px);
+}
+
+@media (max-width: 720px) {
+  .nav {
+    padding-top: 2.125rem;
+  }
+
+  .nav img {
+    float: right;
+    width: 120px;
+  }
 }
 
 .position-relative {
