--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,6 +323,26 @@ a:hover {
   transform: translateY(-5px);
 }
 
+.brand {
+  background-image: url(../brand/logo.svg); 
+  background-size: contain;
+  background-repeat: no-repeat; 
+  height: 120px;
+}
+
+@media (max-width: 992px) {
+
+  .brand {
+    background-image: url(../brand/logo_mobile.svg);  
+    background-position: right;
+    width: 35%;
+    height: 80px; 
+    float: right;
+  }
+
+
+}
+
 @media (max-width: 720px) {
   .nav {
     padding-top: 2.125rem;
@@ -608,8 +628,7 @@ input:-webkit-autofill:active {
 
   .footer {
     text-align: center;
-    margin-bottom: 30px;
-    padding-top: 2rem;
+    margin-bottom: 30px; 
   }
 
   h1 {
@@ -706,11 +725,7 @@ input:-webkit-autofill:active {
   .contact__title {
     font-size: 1.475rem;
   }
-
-  .sponsors__title {
-    padding-bottom: 0;
-  }
-
+ 
   .info__title-secondary {
     font-size: 1.475rem;
   }
