--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@
 
 /* base */
 
+body {
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
 html,
 body {
   overflow-x: hidden;
@@ -28,11 +36,8 @@ a:hover {
 
 @media (min-width: 992px) {
   .nav .container {
-    max-width: 1250px;
+    max-width: 1200px;
   }
-}
-
-@media (min-width: 992px) {
   .container {
     max-width: 1200px;
   }
@@ -41,7 +46,7 @@ a:hover {
 /* section */
 
 .section {
-  padding: 5.313rem 0;
+  padding: 4.75rem 0;
 }
 
 /* colors */
@@ -52,57 +57,27 @@ a:hover {
 
 /* hero */
 
-.down-icon {
-  position: absolute;
-  bottom: 65px;
-  -webkit-animation: anime 5s;
-  animation: anime 0.8s infinite;
-  animation-timing-function: ease-out;
-  animation-delay: 400ms;
-  transition: all 0.2s ease-in-out;
-  width: 100%;
-  text-align: center;
-}
-
-@keyframes anime {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(15px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-} 
-
-@media (max-width: 992px) {
-  .down-icon { 
-    display: none;
-  }
-}
-
-
-
 .hero {
   min-height: 90vh;
   height: 100%;
   position: relative;
   padding-bottom: 5rem;
-  background-color: #ff3d35;
+  background: url(../image/hero.png);
+  background-position: top center;
+  background-size: cover;
 }
 
 .hero__bg {
-  width: 60%;
-  height: 90%;
+  width: 70%;
+  height: 190%;
   top: 0;
   left: 0;
-  background: url(../image/big-hero.png);
+  background-color: #ff3d35;
   position: absolute;
-  background-position: left center;
+  background-position: center top;
   background-size: cover;
-  -webkit-clip-path: polygon(95% 0, 0 0, 0 100%);
-  clip-path: polygon(95% 0, 0 0, 0 100%);
+  -webkit-clip-path: polygon(90% 0, 0 0, 0 100%);
+  clip-path: polygon(90% 0, 0 0, 0 100%);
 }
 
 .bg__noise {
@@ -120,24 +95,20 @@ a:hover {
 
 .hero__description {
   font-family: "nudista-web", sans-serif;
-  font-size: 2.125rem;
-  font-weight: normal;
-  font-stretch: normal;
+  font-size: 1.781rem;
   font-style: italic;
-  line-height: normal;
   letter-spacing: -1.01px;
-  text-align: right;
-  color: #300829;
+  color: #ffffff;
 }
 
 .hero__title {
-  font-size: 4.688rem;
+  font-size: 3.891rem;
   font-weight: 900;
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
   color: #ffffff;
-  margin-top: 13.8rem;
+  margin-top: 14.063rem;
 }
 
 .hero__title .line-1 {
@@ -151,13 +122,29 @@ a:hover {
   font-family: "IntegralCF-xBold";
   display: block;
   clear: both;
-
-  text-align: right;
+  text-align: left;
 }
 
-@media (min-width: 720px) {
-  .hero__title {
-    font-size: 3.688rem;
+@media (max-width: 1200px) {
+  .hero {
+    min-height: auto;
+    padding-bottom: 4rem;
+  }
+
+  .hero__bg {
+    width: 85%;
+    height: 85%;
+    -webkit-clip-path: polygon(95% 0, 0 0, 0 100%);
+    clip-path: polygon(95% 0, 0 0, 0 100%);
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero__bg {
+    width: 70%;
+    height: 190%;
+    -webkit-clip-path: polygon(90% 0, 0 0, 0 100%);
+    clip-path: polygon(90% 0, 0 0, 0 100%);
   }
 }
 
@@ -166,78 +153,22 @@ a:hover {
     min-height: auto;
   }
 
-  .hero__bg {
-    width: 100%;
-    height: 60%;
-    background-position: top center;
-    background-size: cover;
-    -webkit-clip-path: polygon(65% 0, 0 0, 0 100%);
-    clip-path: polygon(65% 0, 0 0, 0 100%);
-  }
-
   .hero__description {
     font-size: 1.193rem;
   }
 
   .hero__title {
-    font-size: 2.15rem;
+    font-size: 2.575rem;
     padding-left: 0;
-    margin-top: 12rem;
+    margin-top: 8rem;
     text-align: right;
-  }
-
-  .hero__title .line-1 {
-    text-align: right;
-  }
-}
-
-@media (max-width: 992px) {
-  .hero {
-    min-height: auto;
-    padding-bottom: 4rem;
-  }
-
-  .hero__title .line-1 {
-    text-align: right;
-  }
-}
-
-@media (min-width: 992px) {
-  .hero__title {
-    font-size: 4.688rem;
   }
 
   .hero__bg {
-    width: 100%;
-    height: 100%;
-    background-position: top center;
-    background-size: cover;
-    -webkit-clip-path: polygon(65% 0, 0 0, 0 100%);
-    clip-path: polygon(65% 0, 0 0, 0 100%);
-  }
-
-  .hero__title .line-1 {
-    text-align: right;
-  }
-}
-
-@media (min-width: 1200px) {
-  .hero__title {
-    font-size: 4.688rem;
-    float: right;
-  }
-
-  .hero__bg {
-    width: 70%;
-    height: 180%;
-    background-position: center top;
-    background-size: cover;
+    width: 85%;
+    height: 65%;
     -webkit-clip-path: polygon(90% 0, 0 0, 0 100%);
     clip-path: polygon(90% 0, 0 0, 0 100%);
-  }
-
-  .hero__title .line-1 {
-    text-align: left;
   }
 }
 
@@ -246,7 +177,7 @@ a:hover {
 .form {
   border-radius: 8px;
   background-color: #ffffff;
-  padding: 4.375rem;
+  padding: 2.87rem 4.875rem 2.875rem;
 }
 
 .form__title {
@@ -290,9 +221,16 @@ a:hover {
   }
 }
 
+@media (max-width: 992px) {
+  .form {
+    margin-bottom: 1.85rem;
+  }
+}
+
 @media (max-width: 720px) {
   .form {
-    margin-bottom: 3.5rem;
+    margin-top: -21.5rem;
+    margin-bottom: 1.85rem;
   }
 }
 
@@ -324,23 +262,10 @@ a:hover {
 }
 
 .brand {
-  background-image: url(../brand/logo.svg); 
+  background-image: url(../brand/logo.svg);
   background-size: contain;
-  background-repeat: no-repeat; 
-  height: 120px;
-}
-
-@media (max-width: 992px) {
-
-  .brand {
-    background-image: url(../brand/logo_mobile.svg);  
-    background-position: right;
-    width: 35%;
-    height: 80px; 
-    float: right;
-  }
-
-
+  background-repeat: no-repeat;
+  height: 95px;
 }
 
 @media (max-width: 720px) {
@@ -351,6 +276,18 @@ a:hover {
   .nav img {
     float: right;
     width: 120px;
+  }
+}
+
+@media (max-width: 992px) {
+  .brand {
+    height: 55px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .brand {
+    transform: translateX(-5%);
   }
 }
 
@@ -450,16 +387,14 @@ input:focus {
 }
 
 .button-primary {
-  box-shadow: 0 15px 15px -15px #ff463d;
-  background-color: #ff463d;
+  box-shadow: 0 15px 15px -15px #300829;
+  background-color: #3f3fb8;
   color: #fff;
   text-transform: none;
   font-weight: 600;
   border: 0;
   transition: 200ms;
   margin-top: 1.5rem;
-  background-size: 20px 20px;
-  background-position: 12px 13px;
   background-repeat: no-repeat;
   display: inline-block;
   text-align: center;
@@ -470,7 +405,7 @@ input:focus {
   -ms-user-select: none;
   user-select: none;
   border: 1px solid transparent;
-  padding: 0.75rem 0.85rem;
+  padding: 0.75rem 1.875rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
@@ -479,8 +414,8 @@ input:focus {
 
 .button-primary:hover {
   color: #fff;
-  box-shadow: 0 15px 15px -15px #ff463d;
-  background-color: #ff463d;
+  box-shadow: 0 15px 15px -15px #300829;
+  background-color: #3f3fb8;
   transform: translateY(-2px);
 }
 
@@ -611,16 +546,6 @@ input:-webkit-autofill:active {
 }
 
 @media (max-width: 992px) {
-  .hero--bg {
-    display: none;
-  }
-
-  .card {
-    max-width: 90%;
-    margin: 1.125rem auto;
-    padding: 2.5rem;
-  }
-
   .footer p {
     text-align: center;
     margin-bottom: 30px;
@@ -628,7 +553,7 @@ input:-webkit-autofill:active {
 
   .footer {
     text-align: center;
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
   }
 
   h1 {
@@ -636,7 +561,7 @@ input:-webkit-autofill:active {
   }
 
   .hero {
-    padding-bottom: 3rem;
+    padding-bottom: 18rem;
   }
 
   .box {
@@ -649,8 +574,13 @@ input:-webkit-autofill:active {
 }
 
 /* info */
+.info {
+  display: flex;
+  align-items: center;
+}
+
 .info__description {
-  font-size: 1.098rem;
+  font-size: 0.969rem;
   font-weight: normal;
   font-stretch: normal;
   line-height: 1.87;
@@ -659,7 +589,7 @@ input:-webkit-autofill:active {
 }
 
 .info__title {
-  font-size: 1.875rem;
+  font-size: 1.688rem;
   line-height: 1.375;
   color: #ff463d;
   padding-bottom: 1.563rem;
@@ -681,14 +611,23 @@ input:-webkit-autofill:active {
 /* sponsors and contacts */
 
 .sponsors__title,
-.contact__title {
+.contact__title,
+.price__title {
   font-size: 2.375rem;
   font-weight: 600;
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
   text-align: center;
+}
+
+.sponsors__title,
+.price__title {
   color: #ff463d;
+}
+
+.contact__title {
+  color: #3f3fb8;
 }
 
 .sponsors__title {
@@ -710,6 +649,7 @@ input:-webkit-autofill:active {
   max-width: 100%;
 }
 
+.price__description,
 .contact__description {
   font-size: 1.25rem;
   font-weight: normal;
@@ -725,7 +665,7 @@ input:-webkit-autofill:active {
   .contact__title {
     font-size: 1.475rem;
   }
- 
+
   .info__title-secondary {
     font-size: 1.475rem;
   }
@@ -754,14 +694,14 @@ input:-webkit-autofill:active {
 }
 
 .icons__description {
-  font-size: 0.969rem;
+  font-size: 0.925rem;
   font-weight: normal;
   font-stretch: normal;
   line-height: 1.5;
   letter-spacing: normal;
   text-align: center;
   color: #535c6e;
-  padding: 1rem 2rem 0;
+  padding: 1rem 1.6rem 0;
 }
 
 @media (max-width: 992px) {
@@ -893,4 +833,77 @@ input:-webkit-autofill:active {
 
 .footer svg:hover g {
   fill: #0065ff;
+}
+
+.youtube {
+  position: relative;
+  padding-top: 56.15%;
+  overflow: hidden;
+  cursor: pointer;
+  margin-bottom: 4.563rem;
+  background: #000;
+}
+
+.youtube img {
+  width: 100%;
+  top: -16.82%;
+  left: 0;
+}
+
+.youtube .play-button {
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  opacity: 1;
+  border-radius: 100%;
+  box-shadow: -1px 7px 20px 0px #0e0e0e;
+  transition: 0.2s;
+}
+
+.youtube .play-button:hover {
+  box-shadow: 1px 16px 20px -5px #232322;
+}
+
+.youtube .play-button:before {
+  content: "";
+  border-style: solid;
+  border-width: 20px 0 20px 30px;
+  border-color: transparent transparent transparent #fe413a;
+  margin-left: 4px;
+}
+
+.youtube .play-button,
+.youtube img {
+  cursor: pointer;
+}
+.youtube .play-button,
+.youtube .play-button:before,
+.youtube iframe,
+.youtube img {
+  position: absolute;
+}
+.youtube .play-button,
+.youtube .play-button:before {
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+}
+.youtube iframe {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+@media (max-width: 992px) {
+  .youtube .play-button {
+    width: 3.75rem;
+    height: 3.75rem;
+  }
+  .youtube .play-button:before {
+    border-width: 10px 0 10px 20px;
+    margin-left: 2px;
+  }
 }
